[gd_scene load_steps=76 format=2]

[ext_resource path="res://Assets/HUD/HexagonBKG.png" type="Texture" id=1]
[ext_resource path="res://Controller/Components/BattleMenuHUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/HUD/Main/Normal/attack.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD/Main/Normal/block.png" type="Texture" id=4]
[ext_resource path="res://Assets/HUD/Main/Normal/run.png" type="Texture" id=5]
[ext_resource path="res://Assets/HUD/Main/Normal/analysis.png" type="Texture" id=6]
[ext_resource path="res://Assets/HUD/Main/Normal/hability.png" type="Texture" id=7]
[ext_resource path="res://Assets/HUD/Main/Normal/bag.png" type="Texture" id=8]
[ext_resource path="res://Assets/HUD/Main/Pressed/run.png" type="Texture" id=9]
[ext_resource path="res://Assets/HUD/Main/Pressed/analysis.png" type="Texture" id=10]
[ext_resource path="res://Assets/HUD/Main/Pressed/attack.png" type="Texture" id=11]
[ext_resource path="res://Assets/HUD/Main/Pressed/block.png" type="Texture" id=12]
[ext_resource path="res://Assets/HUD/Main/Pressed/hability.png" type="Texture" id=13]
[ext_resource path="res://Assets/HUD/Main/Pressed/bag.png" type="Texture" id=14]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/back.png" type="Texture" id=15]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/back.png" type="Texture" id=16]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/arts.png" type="Texture" id=17]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/arts.png" type="Texture" id=18]
[ext_resource path="res://Assets/HUD/AttackMenu/arrowListBKG.png" type="Texture" id=19]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/arrowUp.png" type="Texture" id=20]
[ext_resource path="res://Assets/HUD/AttackMenu/dPadBKG.png" type="Texture" id=21]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/arrowUp.png" type="Texture" id=22]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/arrowDown.png" type="Texture" id=23]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/arrowDown.png" type="Texture" id=24]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/arrowRight.png" type="Texture" id=25]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/arrowLeft.png" type="Texture" id=26]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/arrowRight.png" type="Texture" id=27]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/arrowLeft.png" type="Texture" id=28]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/clean.png" type="Texture" id=29]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/clean.png" type="Texture" id=30]
[ext_resource path="res://Assets/HUD/AttackMenu/playBKG.png" type="Texture" id=31]
[ext_resource path="res://Assets/HUD/AttackMenu/Pressed/play.png" type="Texture" id=32]
[ext_resource path="res://Assets/HUD/AttackMenu/Normal/play.png" type="Texture" id=33]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 203, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 203, 34 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 203, 34 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 22, 19 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 22, 19 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 22, 19 )

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 19, 22 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 19, 22 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 19, 22 )

[sub_resource type="StyleBoxTexture" id=31]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 19, 22 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=32]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 19, 22 )

[sub_resource type="StyleBoxTexture" id=33]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 19, 22 )

[sub_resource type="StyleBoxTexture" id=34]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 22, 19 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=35]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 22, 19 )

[sub_resource type="StyleBoxTexture" id=36]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 22, 19 )

[sub_resource type="StyleBoxTexture" id=37]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 204, 34 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id=38]
texture = ExtResource( 29 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=39]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 204, 34 )

[sub_resource type="StyleBoxTexture" id=40]
texture = ExtResource( 33 )
region_rect = Rect2( 0, 0, 39, 44 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=41]
texture = ExtResource( 32 )
region_rect = Rect2( 0, 0, 39, 44 )

[sub_resource type="StyleBoxTexture" id=42]
texture = ExtResource( 33 )
region_rect = Rect2( 0, 0, 39, 44 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, -0.667419 )
texture = ExtResource( 1 )

[node name="ToggleTween" type="Tween" parent="."]

[node name="DismissTween" type="Tween" parent="."]

[node name="MainButtons" type="Node2D" parent="."]
visible = false
position = Vector2( -2.79553, -106.909 )

[node name="AttackButton" type="Button" parent="MainButtons"]
margin_right = 195.0
margin_bottom = 30.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockButton" type="Button" parent="MainButtons"]
margin_left = 31.4228
margin_top = 35.8475
margin_right = 226.423
margin_bottom = 65.8475
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HabilityButton" type="Button" parent="MainButtons"]
margin_left = 61.7447
margin_top = 72.6379
margin_right = 256.745
margin_bottom = 102.638
focus_mode = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BagButton" type="Button" parent="MainButtons"]
margin_left = 62.0326
margin_top = 109.524
margin_right = 257.033
margin_bottom = 139.524
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnalysisButton" type="Button" parent="MainButtons"]
margin_left = 29.653
margin_top = 147.428
margin_right = 224.653
margin_bottom = 177.428
focus_mode = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunButton" type="Button" parent="MainButtons"]
margin_left = -1.10391
margin_top = 184.352
margin_right = 193.896
margin_bottom = 214.352
focus_mode = 0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButtons" type="Node2D" parent="."]

[node name="AttackBackButton" type="Button" parent="AttackButtons"]
margin_left = -2.64868
margin_top = 75.2218
margin_right = 192.351
margin_bottom = 105.222
focus_mode = 0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtsButton" type="Button" parent="AttackButtons"]
margin_left = -2.37842
margin_top = -105.839
margin_right = 192.622
margin_bottom = -75.8394
focus_mode = 0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotsBackground" type="TextureRect" parent="AttackButtons"]
margin_left = 28.0616
margin_top = -71.8376
margin_right = 394.062
margin_bottom = -1.83757
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D-Pad" type="Node2D" parent="AttackButtons"]

[node name="DPADBackground" type="TextureRect" parent="AttackButtons/D-Pad"]
margin_left = 27.5891
margin_top = 2.24492
margin_right = 182.589
margin_bottom = 72.2449
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowUpButton" type="Button" parent="AttackButtons/D-Pad"]
margin_left = 94.1153
margin_top = 7.0079
margin_right = 114.115
margin_bottom = 27.0079
focus_mode = 0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeftButton" type="Button" parent="AttackButtons/D-Pad"]
margin_left = 74.0813
margin_top = 27.0328
margin_right = 94.0813
margin_bottom = 47.0328
focus_mode = 0
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowRightButton" type="Button" parent="AttackButtons/D-Pad"]
margin_left = 114.131
margin_top = 27.0328
margin_right = 134.131
margin_bottom = 47.0328
focus_mode = 0
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowDownButton" type="Button" parent="AttackButtons/D-Pad"]
margin_left = 94.1062
margin_top = 47.3868
margin_right = 114.106
margin_bottom = 67.3868
focus_mode = 0
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanButton" type="Button" parent="AttackButtons"]
margin_left = 163.635
margin_top = 1.82843
margin_right = 358.635
margin_bottom = 31.8284
focus_mode = 0
custom_styles/hover = SubResource( 37 )
custom_styles/pressed = SubResource( 38 )
custom_styles/normal = SubResource( 39 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Node2D" parent="AttackButtons"]
position = Vector2( 347.738, -71.8155 )

[node name="AttackPlayBackground" type="TextureRect" parent="AttackButtons/Play"]
margin_right = 155.0
margin_bottom = 70.0
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackPlayButton" type="Button" parent="AttackButtons/Play"]
margin_left = 61.7361
margin_top = 14.119
margin_right = 100.736
margin_bottom = 58.119
focus_mode = 0
custom_styles/hover = SubResource( 40 )
custom_styles/pressed = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainButtons/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="MainButtons/BlockButton" to="." method="_on_BlockButton_pressed"]
[connection signal="pressed" from="MainButtons/HabilityButton" to="." method="_on_HabilityButton_pressed"]
[connection signal="pressed" from="MainButtons/BagButton" to="." method="_on_BagButton_pressed"]
[connection signal="pressed" from="MainButtons/AnalysisButton" to="." method="_on_AnalysisButton_pressed"]
[connection signal="pressed" from="MainButtons/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="pressed" from="AttackButtons/AttackBackButton" to="." method="_on_AttackBackButton_pressed"]
[connection signal="pressed" from="AttackButtons/ArtsButton" to="." method="_on_ArtsButton_pressed"]
[connection signal="pressed" from="AttackButtons/D-Pad/ArrowUpButton" to="." method="_on_ArrowUpButton_pressed"]
[connection signal="pressed" from="AttackButtons/D-Pad/ArrowLeftButton" to="." method="_on_ArrowLeftButton_pressed"]
[connection signal="pressed" from="AttackButtons/D-Pad/ArrowRightButton" to="." method="_on_ArrowRightButton_pressed"]
[connection signal="pressed" from="AttackButtons/D-Pad/ArrowDownButton" to="." method="_on_ArrowDownButton_pressed"]
[connection signal="pressed" from="AttackButtons/CleanButton" to="." method="_on_CleanButton_pressed"]
[connection signal="pressed" from="AttackButtons/Play/AttackPlayButton" to="." method="_on_AttackPlayButton_pressed"]
